[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycryptopony"
version = "0.1.0"
description = "A friendly terminal UI for age, minisign, mat2, rhash, and croc."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vitaly" }]
dependencies = [
    "textual>=0.40.0",
    "pexpect>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pexpect>=4.8.0",
]

[project.scripts]
mycryptopony = "mycryptopony:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
